[package]
name = "rust-inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.25.1"
ndarray = "0.15.6"
ort = {git = "https://github.com/pykeio/ort.git"}
raqote = "0.8.3"
show-image = "0.14.0"
tracing-subscriber = { version = "0.3", default-features = false, features = [ "env-filter", "fmt" ] }
ureq = "2.1"
tracing = "0.1"
